[workspace]
members = [
    ".",
    "lib/nimble"
]

[package]
name = "nimble-gui"
version = "0.0.0"
edition = "2021"

[dependencies]
nimble = { path = "lib/nimble" }
eframe = "0.30.0"
egui = "0.30.0"
tracing-subscriber = "0.3.19"
rfd = "0.15.2"
ureq = { version = "2.12.1", features = ["json"] }

[build-dependencies]
cc = "1.2.7"

[[bin]]
name = "nimble-gui"
path = "src/main.rs"